@@ -37,7 +37,7 @@ import java.lang.ref.WeakReference;
  * r5 = new Red5(conn);
  * IClient client = r5.getClient();
  * </pre> 
- * 
+ *  
  * @author The Red5 Project (red5@osflash.org) 
  * @author Luke Hubbard (luke@codegent.com)  
  * @author Paul Gregoire (mondain@gmail.com)
