@@ -16,6 +16,7 @@ Bugfixes:
 - Fixed bug with recording, where meta files were not removed when using the same name
 - Changed VideoCodecFactory into a "true" factory class
 - Applied patch for h.264 live stream packet handling from Dave Feltenberger
+- Applied FP 10.0.32.18 patch from Ari-Pekka Viitanen
 
 
 Red5 0.8.0 (2009-06-04)
